[gd_scene load_steps=9 format=3 uid="uid://dpmo1wq5rmufm"]

[ext_resource type="Script" uid="uid://c5arh078npgy3" path="res://Scripts/pantalla_de_ganar.gd" id="1_xfx4y"]
[ext_resource type="FontFile" uid="uid://54l50lk1kjsu" path="res://assets/Minecraft.ttf" id="2_a3vat"]
[ext_resource type="Texture2D" uid="uid://dg5bftpf1sl2d" path="res://assets/Nadie puede bañarse dos veces en el mismo río.png" id="2_aq1i5"]
[ext_resource type="Texture2D" uid="uid://cjklvcv6xicib" path="res://assets/1menu1.png" id="3_1ngq5"]
[ext_resource type="PackedScene" uid="uid://cx7krlfn3kn1a" path="res://Rooms/stuned_gato.tscn" id="4_0womr"]
[ext_resource type="Texture2D" uid="uid://3dgclv4oovws" path="res://assets/1menu2.png" id="4_bof5k"]
[ext_resource type="Texture2D" uid="uid://dro6arto07sth" path="res://assets/1next1.png" id="5_o048s"]
[ext_resource type="Texture2D" uid="uid://cckh3c8tdhuct" path="res://assets/1next2.png" id="6_r5elt"]

[node name="Pantalla_de_ganar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xfx4y")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(6.37732e-07, 0.294758, 0.0914471, 1)

[node name="GameOver" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -81.0
offset_right = 63.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_a3vat")
text = "Ganastes crack"

[node name="Menu_button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = 121.0
offset_right = -67.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
texture_normal = ExtResource("3_1ngq5")
texture_pressed = ExtResource("4_bof5k")

[node name="Next_level" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -109.0
offset_right = -66.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
texture_normal = ExtResource("5_o048s")
texture_pressed = ExtResource("6_r5elt")

[node name="NadiePuedeBañarseDosVecesEnElMismoRío" type="Sprite2D" parent="."]
position = Vector2(990, 485)
texture = ExtResource("2_aq1i5")
flip_h = true

[node name="gatete" parent="." instance=ExtResource("4_0womr")]
position = Vector2(129.00002, 488)
scale = Vector2(10, 10)

[connection signal="pressed" from="Menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Next_level" to="." method="_on_next_level_pressed"]
